--- a/movimientos.html
+++ b/movimientos.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <section class="section" id="fotografia">
-    <h1 class="titulillos-moda">Movimientos</h1>
+    <h1 class="titulillos-moda">Movimientos Destacados</h1>
   <div class="fotografias">
       <div id="impresionismo" class="owl-theme">    
             <h4 class="titulillos-foto">IMPRESIONISMO</h4><br>
